[gd_scene load_steps=3 format=3 uid="uid://3yejr3wewjgw"]

[ext_resource type="Script" path="res://scripts/MenuStart.gd" id="1_8s8k5"]
[ext_resource type="VideoStream" path="res://video/cam√©ra_boucle.ogv" id="2_cbv1l"]

[node name="MenuStart2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s8k5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1980.0
offset_bottom = 1080.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Panel"]
layout_mode = 0
offset_right = 1987.0
offset_bottom = 1088.0
audio_track = 1
stream = ExtResource("2_cbv1l")
autoplay = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 100.0
offset_top = 136.0
offset_right = 443.0
offset_bottom = 444.0

[node name="Jouer" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/Jouer"]
layout_mode = 0
offset_left = 43.0
offset_top = 23.0
offset_right = 307.0
offset_bottom = 79.0
mouse_filter = 2
bbcode_enabled = true
text = "[center][font_size=25]Jouer"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/VBoxContainer/Options"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 305.0
offset_bottom = 82.0
mouse_filter = 2
bbcode_enabled = true
text = "[center][font_size=25]Options"

[node name="Quitter" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel/VBoxContainer/Quitter"]
layout_mode = 0
offset_left = 43.0
offset_top = 32.0
offset_right = 307.0
offset_bottom = 88.0
mouse_filter = 2
bbcode_enabled = true
text = "[center][font_size=25]Quitter"

[connection signal="pressed" from="Panel/VBoxContainer/Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
